[project]
name = "iqwaveform"
version = "0.7.0"
description = "tools for IQ waveform analysis and visualization"
authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]
dependencies = [
    "pandas>=1.1",
    "scipy>=1.9.2",
    "seaborn>=0.12",
    "numpy>=1.21",
    "matplotlib>=3.6",
    "numexpr>=2.7",
    "scikit-learn>=1.1,<2.0",
    "numba>=0.57.1",
    "intel-cmplr-lib-rt>=2023.1.0",
    "tbb-devel>=2021.9.0",
    "tbb>=2021.9.0",
    "intel-openmp>=2023.1.0",
    "omb>=0.1.dev0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.md"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm.version]
source = "scm"
write_to = "iqwaveform/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
lint = [
    "flake8",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

