[project]
name = "iqwaveform"
version = "0.28.0"
description = "tools for IQ waveform analysis and visualization"
authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]
dependencies = [
    "pandas>=1.1",
    "scipy>=1.9.2",
    "seaborn>=0.12",
    "numpy>=1.21",
    "matplotlib>=3.7",
    "numexpr>=2.7",
    "scikit-learn>=1.1,<2.0",
    "methodtools",
    "xarray",
    "array-api-compat>=1.6",
    "typing-extensions"
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.md"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm.version]
source = "scm"
write_to = "iqwaveform/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
lint = [
    "flake8",
]
dev = [
    "ipython>=8.12.3",
    "ruff>=0.4.2",
    "pip",
    "jupyter"
]

[tool.ruff]
target-version = "py39"
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401", "F403", "E402"]
"**/*.py" = ["EM102","G004"]