[project]
name = "iqwaveform"
dynamic = ["version"]
description = "low-level tools for IQ waveform analysis and visualization"
authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]
dependencies = [
    "pandas>=1.5",
    "scipy>=1.9.2",
    "numpy>=1.21",
    "matplotlib>=3.7",
    "numexpr>=2.7",
    "methodtools",
    "xarray",
    "array-api-compat>=1.6",
    "typing-extensions",
    "numba"
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.md"}

[project.optional-dependencies]
cellular = [
    "scikit-learn>=1.1,<2.0"
]

dev = [
    "ipython>=8.12.3",
    "ruff>=0.4.2",
    "pip",
    "jupyter"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
includes = ["src/iqwaveform"]

[tool.hatch.version]
path = "src/iqwaveform/_version.py"

# the default virtual environment
[tool.hatch.envs.default]
features = ["dev"]
path = ".venv"
python = "3.13"

[tool.hatch.envs.build]
features = ["dev"]
python = "3.13"

[tool]
[tool.ruff]
target-version = "py39"
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401", "F403", "E402"]
"**/*.py" = ["EM102","G004"]